# agent-project-bootstrap

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  USING-WITH-CODE-PUPPY.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/src/baron/: __init__.py  cli.py  clock.py  frontmatter.py  gitutil.py  guard.py  handoff.py  indexer.py  ledger.py  lock.py  rules.py  schemas.py  status.py  validate.py  waivers.py  worktree.py
cli/src/baron/data/: capability-rules.v1.yaml
cli/src/baron/forge/: __init__.py  base.py  github.py
cli/src/baron/runtimes/: __init__.py  pydantic_ai.py
cli/tests/: conftest.py  test_cli.py  test_guard.py  test_handoff.py  test_indexer.py  test_ledger.py  test_lock.py  test_pydantic_ai.py  test_rules.py  test_schemas.py  test_status.py  test_validate.py  test_waivers.py  test_worktree.py
docs/: BACKLOG.md  LEARNINGS.md  worktree-migration.md
docs/adr/: ADR-001-runtime-agnostic-multi-agent-bootstrap.md  ADR-002-ways-of-working-2026-07.md  ADR-003-baron-cli.md  ADR-004-baron-guard-enforcement.md
docs/notes/: CORRECTION-wibey-vs-codepuppy.md  code-puppy-capability-map.md
legacy/: README.md  SKILL-v0.3.md
legacy/vault/_meta/PERSONAS/: IVY.md
legacy/vault/projects/__PROJECT__/: CLAUDE.md
skills/agent-project-bootstrap/: SKILL.md
skills/agent-project-bootstrap/assets/collab-repo/: BOOTSTRAP-ADMIN.md  BOOTSTRAP.md  CLAUDE.md  CONVENTIONS.md  COORDINATION.md  ORCHESTRATE.md  PARTICIPATE.md  QUICKSTART.md  README.md  START.md  manifest.example.yaml
skills/agent-project-bootstrap/assets/collab-repo/_failover-cron-sections/: cloud-routine.md  gh-actions-cron.md  launchd-cron.md  systemd-timer.md
skills/agent-project-bootstrap/assets/collab-repo/_handoff/: README.md  {{DATE}}-bootstrap-to-librarian-genesis.md
skills/agent-project-bootstrap/assets/collab-repo/decisions/: README.md
skills/agent-project-bootstrap/assets/collab-repo/findings/: README.md
skills/agent-project-bootstrap/assets/commands/: vc.md
skills/agent-project-bootstrap/assets/vault/: CLAUDE.md
skills/agent-project-bootstrap/references/: capability-rules.md  capability-vocab.v1.md  collab-repo-design.md  design-decisions.md  manifest.schema.md  obsidian-setup.md  persona.schema.md  v1-self-hosting-notes.md
skills/multi-agent-audit/: .gitignore  SKILL.md
skills/multi-agent-audit/agents/: project-auditor.md
skills/multi-agent-audit/assets/: actors.example.yaml  report-template.html
skills/multi-agent-audit/references/: actor-resolution.md  advanced-metrics.md  bootstrap-adapter.md  confidence-and-trends.md  coverage-parsers.md  discovery.md  drift-analysis.md  metric-taxonomy.md  platform-integrations.md  report-template.md  short-form-mode.md  timeline.md
skills/multi-agent-audit/scripts/: collect_git_metrics.sh  compute_centrality.py  extract_timeline.py  ingest_otel.py  merge_telemetry.py  parse_coverage.py  persona_attribution.py  render_report.py  render_short.py  trend_reader.py
skills/multi-agent-audit/tests/: subagent_isolation_smoke.md  test_ingest_otel.py  verify_readonly_contract.sh
skills/multi-agent-audit/tests/fixtures/: flat_spans.jsonl  missing_attrs.jsonl  otlp_two_sessions.json
tests/: bi_runtime_accept.py  lint_repo.py
tests/examples/rex/: persona.yaml
tests/examples/tess/: persona.yaml
(+32 files in other folders)
