# baron-cli — Phase 2 of agent-project-bootstrap: conventions -> mechanisms (ADR-003).
#
# Dependency policy (ADR-003): typer + pyyaml ONLY. No rich (typer may pull it
# transitively; baron never imports it), no gitpython (git via subprocess), no
# jsonschema (validation is hand-rolled declarative data in baron/schemas.py).
# gh is an OPTIONAL runtime prerequisite for forge features; M1-M3 work without it.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baron-cli"
version = "0.3.0"
description = "Disciplined reader/writer over agent-project-bootstrap collab repos — the markdown/git substrate is the database."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
]

# The pydantic-ai runtime adapter (baron.runtimes.pydantic_ai) is an OPTIONAL
# extra: the harness is 0.x ("minor releases may include breaking changes"),
# hence the tight upper bound. Verified against pydantic-ai-harness 0.10.0 +
# pydantic-ai-slim 2.16.0 (2026-07-23). Without the extra, importing the
# module raises a clean ImportError with install instructions.
[project.optional-dependencies]
pydantic-ai = [
  "pydantic-ai-harness>=0.10,<0.11",
  "pydantic-ai-slim>=2.14.1,<3",
]

[project.scripts]
baron = "baron.cli:app"

# Forge implementations are discoverable plugins. GitHub ships built-in; a
# GitLab forge is backlog (docs/BACKLOG.md) and would register here from its
# own distribution, e.g.:  gitlab = "baron_gitlab:GitLabForge"
[project.entry-points."baron.forges"]
github = "baron.forge.github:GitHubForge"

[dependency-groups]
# dev repeats the pydantic-ai extra's pins so `uv run --project cli pytest`
# exercises the real adapter (the extra itself stays optional for users).
dev = [
  "pytest>=8.0",
  "pydantic-ai-harness>=0.10,<0.11",
  "pydantic-ai-slim>=2.14.1,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/baron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
